# Non-Linear-Optimization-Solvers-Package

./: CMakeLists.txt  README.md  package.xml  setup.py
demos/constrained/augemnted_lagrangian/: bound_constrained.py
demos/constrained/augmented_lagrangian/: bound_constrained.py
demos/constrained/augmented_lagrangian/.ipynb_checkpoints/: pendulum-checkpoint.ipynb
demos/constrained/quadratic_programs/: projected_conjugate_gradient.py  projected_gradient.py
demos/constrained/sq_programs/: projected_gradient.py
demos/first_order/: double_integrator.py  fista.py  proximal_gradient.py
demos/mpc/: double_integrator.py  non_linear_pendulum.py  tmp.py
demos/unconstrained/: conjugate_gradient.py  gradient_descent.py  quasi_newton.py
python/py_autodiff/: torch_autodiff.py
python/py_solvers/constrained/augmented_lagrangian/: bound_constrained.py  gradient_projection.py
python/py_solvers/constrained/quadratic_programs/: conjugate_gradient.py  projected_gradient.py
python/py_solvers/constrained/sq_programs/: projected_gradient.py
python/py_solvers/first_order/: fista.py  proximal_gradient.py
python/py_solvers/unconstrained/: conjugate_gradient.py  gradient_descent.py  line_search.py  quasi_newton.py
