### Author : Avadesh Meduri
### Date : 14/04/2020
### This package contains constrained optimization solvers 

cmake_minimum_required(VERSION 2.8.3)

project(nonlinear_solvers)

find_package(catkin REQUIRED)
catkin_package()
catkin_python_setup()

##########################
# building documentation #
##########################
#build_doxygen_documentation()
