<?xml version="1.0"?>
<package>
  <name>nonlinear_solvers</name>
  <version>1.0.0</version>
  <description>This packages contains constrained optimization solvers</description>
  <author email="am9789@nyu.edu">Avadesh Meduri</author>
  <maintainer email="am9789@nyu.edu">Avadesh Meduri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
